<resources>
    <string name="app_name">Pet Buddy</string>
    <string name="Signin">Sign in</string>
    <string name="register">Create a account</string>
    <string name="lognin">Log in</string>
    <string name="Remember">Remember Me</string>
    <string name="Forgot">Forgot Password?</string>
    <string name="welcome">Welcome Back</string>
    <string name="youraccount">Login to your account</string>
    <string name="Doctor">Doctor Speciality</string>
    <string name="Top_Doctor">Top Doctor</string>
    <string name="see_all">See all</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>